--- a/Equidna/Views/Home/Quadratic.cshtml
+++ b/Equidna/Views/Home/Quadratic.cshtml
@@ -9,8 +9,7 @@
     <h1>Modelo cuadrático</h1>
 </div>
 
-    <!--<div><h1 id="FormulaDisplayDiv" style="text-align: center; font-family: 'Walter Turncoat', cursive; font-size: 250%"> </h1></div>
-    -->   
+    
     <div class="eq-c stec" align="left" data-toggle="validator">
         <i>x</i>(t) =
         <div class="fraction">
@@ -46,14 +45,7 @@
         </i>
     </div>
     
-    <!--
-    <div class="col-xs-12 " align="center">
-        <input id="number3" type="number" step="0.01" onchange="updateFromNumber();" />
-        <input id="number2" type="number" step="0.01" onchange="updateFromNumber();" />
-        <input id="number" type="number" step="0.01" onchange="updateFromNumber();" />
-    </div>
-    -->
-   
+
 
 
 <div class="row" align="center">
@@ -85,7 +77,7 @@
                             <td colspan="2" class="text-center" style="background-color:#17aa56">Valores Iniciales</td>
                         </tr>
                         <tr>
-                            <td class="col-xs-6"><input type="text" id="tiempo" class="form-control" style="text-align: center" value="t=0" readonly /></td>
+                            <td class="col-xs-6"><input type="text" id="tiempo2" class="form-control" style="text-align: center" value="t=0" readonly /></td>
                             <td class="col-xs-6">
                                 <i id="velocidad" style="font-size: 18px">
 
@@ -317,6 +309,7 @@
 			var buttons7Click = Array.prototype.slice.call( document.querySelectorAll( '#btn-click button' ) ),
 				buttons9Click = Array.prototype.slice.call( document.querySelectorAll( 'button.btn-8g' ) ),
 				totalButtons7Click = buttons7Click.length,
+                classie,
 				totalButtons9Click = buttons9Click.length;
 
 			buttons7Click.forEach( function( el, i ) { el.addEventListener( 'click', activate, false ); } );
@@ -423,29 +416,27 @@
         var nomi = parseFloat(fracciondos.value / fracciondosde.value);
         var nominatre = parseFloat(fracciontres.value / fracciontresde.value);
 
-        //uno
         if (deno - Math.floor(deno) === 0) {
             if (deno != 0) {
                 if (deno == 1) {
                     vamoaver1.innerHTML = "1";
                     valorposicion.innerHTML = "x(0)=" + "x<sub>0</sub>= 1";
-                    //  valorvelocidad.innerHTML = "v(0)=" + "v<sub>0</sub>= " + "1";
+                    
                 }
                 else if (deno == -1) {
                     vamoaver1.innerHTML = "-1";
                     valorposicion.innerHTML = "x(0)=" + "x<sub>0</sub>= -1";
-                    //valorvelocidad.innerHTML = "v(0)=" + "v<sub>0</sub>= " + "-1";
+                    
                 }
                 else {
                     if (deno < 0) {
                         vamoaver1.innerHTML = deno.toString();
                         valorposicion.innerHTML = "x(0)=" + "x<sub>0</sub>= " + deno.toString();
-                        //  valorvelocidad.innerHTML = "v(0)=" + "v<sub>0</sub>= " + deno.toString();
-
+                       
                     } else {
                         vamoaver1.innerHTML = deno.toString();
                         valorposicion.innerHTML = "x(0)=" + "x<sub>0</sub>= " + deno.toString();
-                        //valorvelocidad.innerHTML = "v(0)=" + "v<sub>0</sub>= " + deno.toString();
+                        
                     }
 
                 }
@@ -455,7 +446,7 @@
             else {
                 vamoaver1.innerHTML = "";
                 valorposicion.innerHTML = "x(0)=" + "x<sub>0</sub>= 0";
-                // valorvelocidad.innerHTML = "v(0)=" + "v<sub>0</sub>= 0";
+              
             }
 
         }
@@ -475,11 +466,7 @@
                 var varpofa = document.getElementById("valso");
                 varpo.value = Math.abs(fraccionuno.value);
                 varpofa.value = Math.abs(fraccionunode.value);
-              //  valorvelocidad.innerHTML = "v(0)=" + "v<sub>0</sub>= " + "<a>-</a><div class='fraction'><span class='fup' ><i><input id='vv' type='number' min='-99' max='99'   style='text-align: center;  width:50px;  border-bottom-color:black; border-top: 0; border-left: 0; border-right: 0; '   readonly> </input> </i></span><span class='bar'>/</span><span class='fdn' ><i><input id='vva' type='number'  min='1' max='99' style='text-align: center ;width:50px ; border: none;' readonly> </input></i></span></div>";
-               // var vv = document.getElementById("vv");
-                //var vva = document.getElementById("vva");
-               // vv.value = Math.abs(fracciondem.value);
-                //vva.value = Math.abs(fracciondem1.value);
+              
 
             } else {
                 vamoaver1
@@ -489,11 +476,7 @@
                 var je = document.getElementById("je");
                 ju.value = fraccionuno.value;
                 je.value = fraccionunode.value;
-              //  valorvelocidad.innerHTML = "v(0)=" + "v<sub>0</sub>= " + "<div class='fraction'><span class='fup' ><i><input id='vv' type='number' min='-99' max='99'   style='text-align: center;  width:50px;  border-bottom-color:black; border-top: 0; border-left: 0; border-right: 0; '  readonly> </input> </i></span><span class='bar'>/</span><span class='fdn' ><i><input id='vva' type='number'  min='1' max='99' style='text-align: center ;width:50px ; border: none;' value='2' readonly> </input></i></span></div>";
-               // var vvj = document.getElementById("vv");
-                //var vvaj = document.getElementById("vva");
-                //vvj.value = fracciondem.value;
-                //vvaj.value = fracciondem1.value;
+          
                 valorposicion
                       .innerHTML =
                       "x(0)=" + "x<sub>0</sub>= " + "<div class='fraction'><span class='fup' ><i><input id='valpo1' type='number' min='-99' max='99'   style='text-align: center;  width:50px;  border-bottom-color:black; border-top: 0; border-left: 0; border-right: 0; '  readonly> </input> </i></span><span class='bar'>/</span><span class='fdn' ><i><input id='valjo' type='number'  min='1' max='99' style='text-align: center ;width:50px ; border: none;' value='2' readonly> </input></i></span></div>";
@@ -506,9 +489,6 @@
 
         }
 
-
-
-        //dos
         if (nomi - Math.floor(nomi) === 0) {
             if (nomi != 0) {
                 if (nomi == 1) {
@@ -527,13 +507,12 @@
                         vamoaver2.innerHTML = "+"+nomi.toString() + " t<sup>2</sup>";
                     }
                 }
-               // vamoaver2.innerHTML = nomi.toString();
-               // valorposicion.innerHTML = "x(0)=" + "x<sub>0</sub>= " + nomi.toString();
+         
             }
 
             else {
                 vamoaver2.innerHTML = "";
-               // valorposicion.innerHTML = "x(0)=" + "x<sub>0</sub>= 0";
+            
             }
 
         }
@@ -547,11 +526,6 @@
                 io.value = Math.abs(fracciondosde.value);
                 qi.value = Math.abs(fracciondos.value);
 
-               // valorposicion.innerHTML = "x(0)=" + "x<sub>0</sub>= " + "<a> - </a> <div class='fraction'><span class='fup' ><i><input id='valpo' type='number' min='-99' max='99'   style='text-align: center;  width:50px;  border-bottom-color:black; border-top: 0; border-left: 0; border-right: 0; '  readonly> </input> </i></span><span class='bar'>/</span><span class='fdn' ><i><input id='valso' type='number'  min='1' max='99' style='text-align: center ;width:50px ; border: none;' value='2' readonly> </input></i></span></div>";
-                //var varpo = document.getElementById("valpo");
-                //var varpofa = document.getElementById("valso");
-               // varpo.value = Math.abs(fraccionnom1.value);
-               // varpofa.value = Math.abs(fraccionnom.value);
             }
             else {
                 vamoaver2
@@ -561,20 +535,9 @@
                 var jo = document.getElementById("jo");
                 ji.value = fracciondos.value;
                 jo.value = fracciondosde.value;
-               // valorposicion
-              // .innerHTML =
-             //  "x(0)=" + "x<sub>0</sub>= " + "<div class='fraction'><span class='fup' ><i><input id='valpo1' type='number' min='-99' max='99'   style='text-align: center;  width:50px;  border-bottom-color:black; border-top: 0; border-left: 0; border-right: 0; '  readonly> </input> </i></span><span class='bar'>/</span><span class='fdn' ><i><input id='valjo' type='number'  min='1' max='99' style='text-align: center ;width:50px ; border: none;' value='2' readonly> </input></i></span></div>";
-              //  var varposi = document.getElementById("valpo1");
-            //    var varposix = document.getElementById("valjo");
-              //  varposi.value = fraccionnom.value;
-            //    varposix.value = fraccionnom1.value;
+           
             }
-
-
         }
-
-
-        //tres
 
         if (nominatre - Math.floor(nominatre) === 0) {
             if (nominatre != 0) {
@@ -597,15 +560,12 @@
 
 
                 }
-                // vamoaver2.innerHTML = nomi.toString();
-                // valorposicion.innerHTML = "x(0)=" + "x<sub>0</sub>= " + nomi.toString();
             }
 
 
 
             else {
                 vamoaver3.innerHTML = "";
-                // valorposicion.innerHTML = "x(0)=" + "x<sub>0</sub>= 0";
                 valorvelocidad.innerHTML = "v(0)=" + "v<sub>0</sub>= 0";
             }
 
@@ -624,12 +584,6 @@
                 var vva = document.getElementById("vva");
                 vv.value = Math.abs(fracciontres.value);
                 vva.value = Math.abs(fracciontresde.value);
-
-                // valorposicion.innerHTML = "x(0)=" + "x<sub>0</sub>= " + "<a> - </a> <div class='fraction'><span class='fup' ><i><input id='valpo' type='number' min='-99' max='99'   style='text-align: center;  width:50px;  border-bottom-color:black; border-top: 0; border-left: 0; border-right: 0; '  readonly> </input> </i></span><span class='bar'>/</span><span class='fdn' ><i><input id='valso' type='number'  min='1' max='99' style='text-align: center ;width:50px ; border: none;' value='2' readonly> </input></i></span></div>";
-                //var varpo = document.getElementById("valpo");
-                //var varpofa = document.getElementById("valso");
-                // varpo.value = Math.abs(fraccionnom1.value);
-                // varpofa.value = Math.abs(fraccionnom.value);
             }
             else {
                 vamoaver3
@@ -645,22 +599,10 @@
                 var vvaj = document.getElementById("vva");
                 vvj.value = fracciontres.value;
                 vvaj.value = fracciontresde.value;
-                // valorposicion
-                // .innerHTML =
-                //  "x(0)=" + "x<sub>0</sub>= " + "<div class='fraction'><span class='fup' ><i><input id='valpo1' type='number' min='-99' max='99'   style='text-align: center;  width:50px;  border-bottom-color:black; border-top: 0; border-left: 0; border-right: 0; '  readonly> </input> </i></span><span class='bar'>/</span><span class='fdn' ><i><input id='valjo' type='number'  min='1' max='99' style='text-align: center ;width:50px ; border: none;' value='2' readonly> </input></i></span></div>";
-                //  var varposi = document.getElementById("valpo1");
-                //    var varposix = document.getElementById("valjo");
-                //  varposi.value = fraccionnom.value;
-                //    varposix.value = fraccionnom1.value;
             }
 
 
         }
-
-      //  velocityFunction.a = parseFloat(deno);
-       // positionFunction = velocityFunction.integrate(nomi);
-        // updateFunction();
-
 
         quadraticFunction.a = parseFloat(nomi);
         quadraticFunction.c = parseFloat(deno);
@@ -669,39 +611,6 @@
         updateAll();
         }
     }
-
-
-
-
-
-
-
-
-    //UpInput
-  /*  function updateFromNumber() {
-        if (firstUpdate) {
-            firstUpdate = false;
-            quadraticFunction.a = parseFloat(numberField3.value);
-            quadraticFunction.c = parseFloat(numberField.value);
-            quadraticFunction.b = parseFloat(numberField2.value);
-            linearFunction = quadraticFunction.derivate();
-            updateAll();
-        }
-        //UpTable
-
-        function updateFromTable() {
-        }
-        if (firstUpdate) {
-            firstUpdate = false;
-
-
-            
-
-
-
-
-        }
-    }*/
     function Start() {
         startButton.disabled = true;
         final = parseFloat(quadraticFunction.b) + parseFloat(quadraticFunction.a * parseInt(document.getElementsByName("endTime")[0].value));
@@ -789,13 +698,11 @@
 
     }
   
-
     var quadraticFunction = new QuadraticFunction(0.5, 0, 0);
     var linearFunction = new LinearFunction(1, 0);
 
     var FormulaDiv = document.getElementById("FormulaDisplayDiv");
 
-    
     JXG.Options.axis.ticks.majorHeight = 40;
     JXG.Options.axis.ticks.minorHeight = 15;
     JXG.Options.axis.ticks.minorTicks = 5;
@@ -890,9 +797,6 @@
     var volt = '@Url.Content("~/Content/images/volte.gif")';
     var inverso = '@Url.Content("~/Content/images/nuevoinver.gif")';
 
-
-
-    // var slider = sliderBox.create('slider', [urlImg,[1,1],[1,1] ]);
     var slider = sliderBox.create('slider', [[-50, 0], [50, 0], [-50, 0, 50]], { size: 3, opacity: 0.5, ticks: { drawLabels: false, highlight: true } });
     var im = sliderBox.create('image',
     [
@@ -989,10 +893,8 @@
         var azulp = quadraticFunction.c;
         var rojp = linearFunction.b;
         var rojp1 =linearFunction.evaluate(1);
-         // alert(azulp);
         simplifica(azulp * 100, 100);
         
-       // headk.innerHTML = azulp + "-" + rojp + "-" + rojp1;
        
     }
 
@@ -1024,35 +926,13 @@
     }
 
     function updateAll() {
-        //updateFromNumberfraction();
+    
         
         updateGraphs();
-       // updateFields();
-      //  updateText();
-      //  updateTable();
+     
         firstUpdate = true;
     }
 
-   
-
-    /*function updateTable() {
-        numtable.value = linearIntPoint.Y();
-        numtable2.value = linearSlopePoint.Y();
-        numtable3.value = quadraticPoint.Y();
-    }*/
-    
-   /* function updateFields() {
-        numberField3.value = quadraticFunction.a;
-        numberField.value = quadraticFunction.c;
-        numberField2.value = quadraticFunction.b;
-        numberField3.value = Math.round(numberField3.value * 100) / 100;
-        numberField.value = Math.round(numberField.value * 100) / 100;
-        numberField2.value = Math.round(numberField2.value * 100) / 100;
-    }
-
-    function updateText() {
-        FormulaDiv.innerHTML = quadraticFunction.ToString();
-    }*/
 
     function updateGraphs() {
 
